Change Minimum Java Version to Java 11 (#25)