@@ -12,6 +12,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import java.util.List;
 import java.util.stream.Collectors;
 
 import org.apache.sling.api.resource.Resource;
@@ -23,7 +24,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import com.adobe.cq.wcm.core.components.models.Image;
 #end
 import com.day.cq.wcm.api.Page;
-import com.google.common.collect.ImmutableList;
 
 #if ($optionWcmioHandler == 'y')
 import io.wcm.handler.media.Media;
@@ -76,14 +76,14 @@ class CustomCarouselTest {
     CustomCarousel underTest = context.request().adaptTo(CustomCarousel.class);
 #end
 #if ($optionWcmioHandler == 'n')
-    assertEquals(ImmutableList.of(
+    assertEquals(List.of(
         "/content/mypage/_jcr_content/myresource/slides/item1.img.png",
         "/content/mypage/_jcr_content/myresource/slides/item2.img.png"),
         underTest.getSlideImages().stream()
             .map(Image::getSrc)
             .collect(Collectors.toList()));
 #else
-    assertEquals(ImmutableList.of(
+    assertEquals(List.of(
         "/content/dam/slides/slide1.png/_jcr_content/renditions/original./slide1.png",
         "/content/dam/slides/slide2.png/_jcr_content/renditions/original./slide2.png"),
         underTest.getSlideImages().stream()
